--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,6 @@ security:
     resource:
       filter-order: 3
 
-logging.level.org.springframework.security: DEBUG
+logging:
+  level:
+    org.springframework.security: DEBUG
