--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,15 @@
     <name>spring-oauth2-demo-integration</name>
     <description>Demo project for Spring Boot</description>
 
+    <developers>
+        <developer>
+            <name>maskleo</name>
+            <email>maskleo@sina.com</email>
+            <timezone>2018-04-28</timezone>
+            <url>https://github.com/my-learn/spring-oauth2-demo-integration</url>
+        </developer>
+    </developers>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
